# auto_mcp

./: .gitignore  README.md  TODO.md  package.xml  setup.cfg  setup.py
auto_mcp/: __init__.py  fast_server.py  hello.py  introspect.py  mcp_sse.py  server.py  state.py
